--- a/src/index.scss
+++ b/src/index.scss
@@ -2,10 +2,11 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e7f6ff;
 }
 
 * {
-  font-family: 'Inter';
+  font-family: 'Inter', system-ui;
 }
 
 .wrapper {
@@ -17,16 +18,16 @@ body {
 }
 
 header {
- border-bottom: 1px solid #eaeaea;
-    img {
-      margin-right: 15px;
-      margin-left: 45px;
-    }
-
-    h3,p {
-      margin: 0;
-    }
+  border-bottom: 1px solid #eaeaea;
+  img {
+    margin-right: 15px;
   }
+
+  h3,
+  p {
+    margin: 0;
+  }
+}
 
 .content {
   h1 {
@@ -34,56 +35,48 @@ header {
   }
 }
 
-.card {
-  border: 1px solid #f3f3f3;
-  padding: 30px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
-  transition: box-shadow 0.2s ease-in-out, transform 0,2 ease-in-out;
+.cartEmpty {
+  text-align: center;
 
-  &:hover {
-   box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.08);
-   transform: translateY(-5px);
+  p {
+    width: 280px;
+    line-height: 24px;
   }
 
-  .favorite {
-    position: absolute;
-    cursor: pointer;
-  }
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
 
-  span {
-    opacity: 0.5;
-    font-size: 11px;
-    text-transform: uppercase;
-    font-weight: 500;
-  }
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
 
-  b {
-    font-size: 14px;
-    font-weight: 700;
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
   }
-
-  .h5{
-    font-weight: 400;
-    font-size: 14px;
-  }
-}
-
-.button {
-  background: #FFFFFF;
-  border: 1px solid #F2F2F2;
-  border-radius: 8px;
-  box-sizing: border-box;
-  height: 32px;
-  width: 32px;
-  cursor: pointer;
 }
 
 .search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+
+  .clear {
+    position: absolute;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    top: 14px;
+    right: 15px;
+  }
 
   input {
     border: 0;
@@ -91,82 +84,49 @@ header {
     font-size: 16px;
     width: 200px;
   }
-
-}
-
-.overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-
-.drawer {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  width: 420px;
-  height: 100%;
-  right: 0;
-  background: #FFFFFF;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  padding: 30px;
-
-  .items {
-    flex: 1;
-    overflow: auto;
-    margin-bottom: 40px;
-  }
-
-  h2 {
-    margin: 0;
-  }
 }
 
 .cartTotalBlock {
- ul {
-  display: block;
-  margin-bottom: 40px !important;
+  ul {
+    display: block;
+    margin-bottom: 40px !important;
 
-  li {
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 20px;
-  
-  
-  div {
-    flex: 1;
-    height: 1px;
-    border-bottom: 1px dashed #dfdfdf;
-    position: relative;
-    top: -4px;
-    margin: 0 7px;
-  }
- }
-}
-.greenButton {
-  position: relative;
+    li {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 20px;
 
-  &:disabled {
-    animation: button-loading 0.6s ease-in-out infinite;
-  }
-
-  &:hover {
-    img {
-      transform: translateX(5px);
+      div {
+        flex: 1;
+        height: 1px;
+        border-bottom: 1px dashed #dfdfdf;
+        position: relative;
+        top: -4px;
+        margin: 0 7px;
+      }
     }
   }
 
-  img {
-    position: absolute;
-    right: 30px;
-    top: 20px;
-    transition: transform 0.15s ease-in-out;
+  .greenButton {
+    position: relative;
+
+    &:disabled {
+      animation: button-loading 0.6s ease-in-out infinite;
+    }
+
+    &:hover {
+      img {
+        transform: translateX(5px);
+      }
+    }
+
+    img {
+      position: absolute;
+      right: 30px;
+      top: 20px;
+      transition: transform 0.15s ease-in-out;
+    }
   }
-}
 }
 
 .greenButton {
@@ -202,8 +162,8 @@ header {
   padding: 20px;
 
   .cartItemImg {
-    width: 70px;
     height: 70px;
+    width: 70px;
     background-size: contain;
     background-position: 0 -3px;
     background-repeat: no-repeat;
@@ -222,12 +182,22 @@ header {
   .removeBtn {
     opacity: 0.5;
     cursor: pointer;
-    transition: 0.15s ease-in-out;
- 
+    transition: opacity 0.15s ease-in-out;
 
-  &:hover {
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+@keyframes button-loading {
+  0% {
     opacity: 1;
   }
-
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
   }
 }
